<resources>
    <string name="app_name">City Pinboard</string>

    <!-- Strings related to LoginFragment -->
    <string name="register_button">Registreer</string>
    <string name="next_button">Login</string>
    <string name="hint_username">Gebruikersnaam</string>
    <string name="hint_password">Wachtwoord</string>
    <string name="hint_confirm_password">Bevestig wachtwoord</string>
    <string name="error_password">Wachtwoord moet minstens 8 letters bevatten</string>
    <string name="error_confirm_password">Wachtwoord moet overeen komen</string>
    <string name="error_username">Gebruikersnaam moet minstens 4 letters bevatten</string>
    <string name="error_useralreadyexists">Gebruikersnaam is reeds in gebruik</string>
    <string name="error_wrong_user_or_password">Foute gebruikersnaam of wachtwoord</string>
    <string name="something_went_wrong">Oeps, er ging iets fout</string>

    <string name="post_button">Post it</string>

    <string name="key_pinboard">pinboard</string>

    <!-- Strings related to Page titles -->
    <string name="pinboard_details_title">Posts</string>


    <!-- Strings related to sharedPreferences keys -->
    <string name="sp_token_key">com.jonasdevrient.citypinboard.token</string>
    <string name="sp_token_username">com.jonasdevrient.citypinboard.username</string>
    <string name="sp_token_likedPosts">com.jonasdevrient.citypinboard.likedPosts</string>
    <string name="sp_token_password">com.jonasdevrient.citypinboard.password</string>

    <string name="back_button">Terug</string>


    <!-- Strings related to searchbar keys -->
    <string name="hint_search">Zoek steden &#8230;</string>

    <string name="add_post_title">Voeg een post toe</string>

    <string name="error_post_field_empty">Veld mag niet leeg zijn</string>
    <string name="hint_post_title">Post titel</string>
    <string name="hint_post_body">Post tekst hier &#8230;</string>

    <string name="registration_background_description">Achtergrond registratie pagina</string>

    <string name="no_internet_connection_description">Placeholder geen internet</string>

    <string name="no_internet_connection">Geen internet connectie</string>

    <string name="you_are_offline">Je bent offline</string>

    <string name="no_internet_connection_solution">Valideer jouw netwerk en probeer opnieuw</string>

    <string name="pinboard_card_amount_of_posts">%1d posts</string>
    <string name="plaats_uw_stad_op_kaart">Plaats uw stad op kaart met deze applicatie!</string>
    <string name="registreer_in_minder_dan_30_seconden_en_ga_van_start_met_posts_its_maken">Registreer in minder dan 30 seconden en ga van start met posts-its maken</string>
</resources>
